# cadex_test

./: CMakeLists.txt  README.md  main.cpp
curves_lib/: CMakeLists.txt
curves_lib/include/curves_lib/: circle.h  curve.h  curve_generator.h  ellipse.h  helix.h  vector3d.h
curves_lib/src/: circle.cpp  curve.cpp  curve_generator.cpp  ellipse.cpp  helix.cpp  vector3d.cpp
